<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/button_chooseUserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userTypeSelectTitle"
            android:textSize="16dp"
            android:onClick="promptSelection"/>

        <EditText
            android:id="@+id/enter_id"
            android:hint="@string/enter_id"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/enter_password"
            android:hint="@string/enter_password"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:textSize="16dp"
                android:text="@string/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="login"/>

        </LinearLayout>

    </LinearLayout>





</LinearLayout>
