<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPostTransparent"
    tools:context="com.example.marlowex.hopitalink.AddPostActivity">


    <LinearLayout
        android:id="@+id/add_post_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="50dp"
        android:paddingBottom="20dp"
        android:background="@color/colorPostBackground"
        android:elevation="4dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_healthCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/healthCheck"
            android:onClick="addHealthCheck"/>

        <Button
            android:id="@+id/button_medicalReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/medicalReport"
            android:onClick="addMedicalReport"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/roomChange"
            android:onClick="addRoomChange"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/infoChange"
            android:onClick="addInfoChange"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="-355dp"
        android:onClick="cancel"
        android:elevation="5dp"
        />

</LinearLayout>
