<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PatientListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="?attr/actionBarSize"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/layout_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/notifications"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/critical"
                        android:layout_marginRight="10dp"
                        android:textSize="24dp"/>

                    <Spinner
                        android:id="@+id/spinner_critical"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"></Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/unstable"
                        android:layout_marginRight="10dp"
                        android:textSize="24dp"/>

                    <Spinner
                        android:id="@+id/spinner_unstable"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"></Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/stabilising"
                        android:layout_marginRight="10dp"
                        android:textSize="24dp"/>

                    <Spinner
                        android:id="@+id/spinner_stabilising"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"></Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/stable"
                        android:layout_marginRight="10dp"
                        android:textSize="24dp"/>

                    <Spinner
                        android:id="@+id/spinner_stable"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"></Spinner>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/left_side_menu_doctor"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"/>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>

